--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
 config.json
 .vscode/
+*.cmd
+*.ko
+*.mod
+*.o
 dali_send
 DALI_init
 dali_init
 dali_config
 dali_cmd
 test.sh
+DALI_driver.mod.c
+Module.symvers
+modules.order
